--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,76 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}PSUSphere{% endblock %}</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="{% static 'css/ready.css' %}">
     <link rel="stylesheet" href="{% static 'css/demo.css' %}">
 </head>
 <body>
-    <div class="main-panel">
-        {% block content %}{% endblock %}
+    <div class="wrapper">
+        <div class="main-header">
+            <div class="logo-header">
+                <a href="/" class="logo">PSUSphere</a>
+                <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
+            </div>
+            <nav class="navbar navbar-header navbar-expand-lg">
+                <div class="container-fluid">
+                    <form class="navbar-left navbar-form nav-search mr-md-3" action="">
+                        <div class="input-group">
+                            <input type="text" placeholder="Search ..." class="form-control">
+                            <div class="input-group-append">
+                                <span class="input-group-text">
+                                    <i class="la la-search search-icon"></i>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
+                    <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+                        <!-- notifications & profile items can be added here -->
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <div class="sidebar">
+            <div class="scrollbar-inner">
+                <div class="user">
+                    <div class="photo">
+                        <img src="{% static 'img/profile.jpg' %}" alt="user-img">
+                    </div>
+                    <div class="info">
+                        <a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
+                            <span>
+                                Administrator
+                                <span class="user-level">Hizrian</span>
+                                <span class="caret"></span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <ul class="nav">
+                    <li class="nav-item active">
+                        <a href="/">
+                            <i class="la la-dashboard"></i>
+                            <p>Dashboard</p>
+                        </a>
+                    </li>
+                    <!-- add other sidebar links here -->
+                </ul>
+            </div>
+        </div>
+
+        <div class="main-panel">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 
     <!-- JS -->
