--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}Home - PSUSphere{% endblock %}
 {% block content %}
 <div class="content">
     <div class="container-fluid">
@@ -8,8 +9,8 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header">
-                        <div class="card-title">Page Title</div>
-                        <div class="card-category">Page Subtitle</div>
+                        <div class="card-title">PSU Sphere</div>
+                        <div class="card-category">App Dev Web Page</div>
                     </div>
                     <div class="card-body">Hello, World</div>
                 </div>
