--- a/templates/includes/form.html
+++ b/templates/includes/form.html
@@ -1,26 +1,33 @@
 {% load widget_tweaks %}
 
-{% if form.non_field_errors %}
-<div class="alert alert-danger" role="alert">
-{% for error in form.non_field_errors %}
-<p{% if forloop.last %} class="mb-0"{% endif %}>{{ error }}</p>
-{% endfor %}
-</div>
-{% endif %}
+<div class="card">
+	<div class="card-header">
+		<div class="card-title">Search</div>
+	</div>
+	<div class="card-body">
+		<form method="get" class="form-inline">
+			<div class="form-group w-100">
+				{% if form.non_field_errors %}
+					<div class="alert alert-danger" role="alert">
+						{% for error in form.non_field_errors %}
+							<p class="mb-0">{{ error }}</p>
+						{% endfor %}
+					</div>
+				{% endif %}
 
-{% for field in form %}
-
-<div class="field item form-group">
-<label>{{ field.label_tag }}</label>
-<div class="form-group">
-{% render_field field class="form-control" %}
+				{% for field in form %}
+					<label class="sr-only">{{ field.label }}</label>
+					{% render_field field class="form-control" placeholder=field.label %}
+					{% if field.errors %}
+						<div class="invalid-feedback d-block">
+							{% for error in field.errors %}{{ error }} {% endfor %}
+						</div>
+					{% endif %}
+				{% endfor %}
+			</div>
+			<div class="mt-2">
+				<button type="submit" class="btn btn-primary">Search</button>
+			</div>
+		</form>
+	</div>
 </div>
-
-{% for error in field.errors %}
-<div class="invalid-feedback">
-{{ error }}
-</div>
-{% endfor %}
-
-</div>
-{% endfor %}
