--- a/templates/base.html
+++ b/templates/base.html
@@ -178,6 +178,12 @@
                             <span class="badge badge-count">14</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'organization-list' %}">
+                            <i class="la la-building"></i>
+                            <p>Organization</p>
+                        </a>
+                    </li>
                     <li class="nav-item {% if request.path == '/forms/' %}active{% endif %}">
                         <a href="/forms/">
                             <i class="la la-keyboard-o"></i>
@@ -193,6 +199,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="/students/">
+                            <i class="la la-user"></i>
+                            <p>Student</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/notifications/">
                             <i class="la la-bell"></i>
                             <p>Notifications</p>
@@ -204,6 +216,12 @@
                             <i class="la la-font"></i>
                             <p>Typography</p>
                             <span class="badge badge-danger">25</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/colleges/">
+                            <i class="la la-university"></i>
+                            <p>College</p>
                         </a>
                     </li>
                     <li class="nav-item">
